--- a/Specsify_Source_Codes/3_Home_page/Home_CSS.css
+++ b/Specsify_Source_Codes/3_Home_page/Home_CSS.css
@@ -19,7 +19,7 @@ body{
     transition: .5s ease-in-out;
     cursor: pointer;
     }
-    
+
     .animated-icon1 span, .animated-icon2 span, .animated-icon3 span {
     display: block;
     position: absolute;
@@ -37,31 +37,31 @@ body{
     -o-transition: .25s ease-in-out;
     transition: .25s ease-in-out;
     }
-    
+
     .animated-icon1 span {
     background: #e65100;
     }
-    
+
     .animated-icon2 span {
     background: #e3f2fd;
     }
-    
+
     .animated-icon3 span {
     background: #f3e5f5;
     }
-    
+
     .animated-icon1 span:nth-child(1) {
     top: 0px;
     }
-    
+
     .animated-icon1 span:nth-child(2) {
     top: 10px;
     }
-    
+
     .animated-icon1 span:nth-child(3) {
     top: 20px;
     }
-    
+
     .animated-icon1.open span:nth-child(1) {
     top: 11px;
     -webkit-transform: rotate(135deg);
@@ -69,12 +69,12 @@ body{
     -o-transform: rotate(135deg);
     transform: rotate(135deg);
     }
-    
+
     .animated-icon1.open span:nth-child(2) {
     opacity: 0;
     left: -60px;
     }
-    
+
     .animated-icon1.open span:nth-child(3) {
     top: 11px;
     -webkit-transform: rotate(-135deg);
@@ -82,49 +82,49 @@ body{
     -o-transform: rotate(-135deg);
     transform: rotate(-135deg);
     }
-    
+
     /* Icon 3*/
-    
+
     .animated-icon2 span:nth-child(1) {
     top: 0px;
     }
-    
+
     .animated-icon2 span:nth-child(2), .animated-icon2 span:nth-child(3) {
     top: 10px;
     }
-    
+
     .animated-icon2 span:nth-child(4) {
     top: 20px;
     }
-    
+
     .animated-icon2.open span:nth-child(1) {
     top: 11px;
     width: 0%;
     left: 50%;
     }
-    
+
     .animated-icon2.open span:nth-child(2) {
     -webkit-transform: rotate(45deg);
     -moz-transform: rotate(45deg);
     -o-transform: rotate(45deg);
     transform: rotate(45deg);
     }
-    
+
     .animated-icon2.open span:nth-child(3) {
     -webkit-transform: rotate(-45deg);
     -moz-transform: rotate(-45deg);
     -o-transform: rotate(-45deg);
     transform: rotate(-45deg);
     }
-    
+
     .animated-icon2.open span:nth-child(4) {
     top: 11px;
     width: 0%;
     left: 50%;
     }
-    
+
     /* Icon 4 */
-    
+
     .animated-icon3 span:nth-child(1) {
     top: 0px;
     -webkit-transform-origin: left center;
@@ -132,7 +132,7 @@ body{
     -o-transform-origin: left center;
     transform-origin: left center;
     }
-    
+
     .animated-icon3 span:nth-child(2) {
     top: 10px;
     -webkit-transform-origin: left center;
@@ -140,7 +140,7 @@ body{
     -o-transform-origin: left center;
     transform-origin: left center;
     }
-    
+
     .animated-icon3 span:nth-child(3) {
     top: 20px;
     -webkit-transform-origin: left center;
@@ -148,7 +148,7 @@ body{
     -o-transform-origin: left center;
     transform-origin: left center;
     }
-    
+
     .animated-icon3.open span:nth-child(1) {
     -webkit-transform: rotate(45deg);
     -moz-transform: rotate(45deg);
@@ -157,12 +157,12 @@ body{
     top: 0px;
     left: 8px;
     }
-    
+
     .animated-icon3.open span:nth-child(2) {
     width: 0%;
     opacity: 0;
     }
-    
+
     .animated-icon3.open span:nth-child(3) {
     -webkit-transform: rotate(-45deg);
     -moz-transform: rotate(-45deg);
@@ -179,4 +179,10 @@ body{
         margin-right: auto;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
     }
-      
+    .logoHandler{
+      text-align: center;
+    }
+    #logoh{
+      width: 300px;
+      height: 300px;
+    }
