--- a/Specsify_Source_Codes/8_Help_page/help_page.css
+++ b/Specsify_Source_Codes/8_Help_page/help_page.css
@@ -172,24 +172,11 @@ body{
     left: 8px;
     }
     /* End of Nav bar CSs*/
-    .logoHandler {
-      text-align: center;
-    }
-    #logoh{
-      width: 300px;
-      height: 300px;
-    }
-    .descriptionDiv {
+
+    .container{
       margin-left: auto;
       margin-right: auto;
+    }
+    .welcome {
       text-align: center;
-      width: 40em;
     }
-    /* .homeparagraph{
-        text-align: center;
-        width: 40em;
-        margin-left: auto;
-        margin-right: auto;
-        font-family: Verdana, Geneva, Tahoma, sans-serif;
-    }
-     */
