--- a/Specsify_Source_Codes/3_Home_page/Home_CSS.css
+++ b/Specsify_Source_Codes/3_Home_page/Home_CSS.css
@@ -180,11 +180,69 @@ body{
       height: 300px;
     }
     .descriptionDiv {
-      margin-left: auto;
-      margin-right: auto;
       text-align: center;
-      width: 40em;
+      font-family: Arial, Helvetica, sans-serif;
     }
+
+    .head1 {
+      padding-bottom: 10px;
+    }
+
+    .paraHome {
+      font-size: 10pt;
+      margin-left: 25px;
+      margin-right: 25px;
+    }
+
+    /* Button */
+
+    .button {
+      border: none;
+      background-color:#b3e4fc;
+      font-size: 16px;
+      cursor: pointer;
+      text-align:center;
+      display:inline-block;
+    }
+    
+    /* On mouse-over */
+
+    .button:hover {
+        color: white;
+      }
+
+        .NEWQ {
+            height: 50px;
+            width: 350px;
+            color: black;
+            box-shadow: 0 2px 10px 0 rgba(0,0,0,0.5);
+            font-size: 11pt;
+            text-align:center;
+            margin-top: 60px;
+            margin-bottom: 10px;
+
+            
+        }
+
+        .CONTQ {
+            height: 50px;
+            width: 350px;
+            color: black;
+            box-shadow: 0 2px 10px 0 rgba(0,0,0,0.5);
+            font-size: 11pt;
+            text-align:center;
+            margin-bottom: 10px;
+        }
+
+        .SAVEDA {
+          height: 50px;
+          width: 350px;
+          color: black;
+          box-shadow: 0 2px 10px 0 rgba(0,0,0,0.5);
+          font-size: 11pt;
+          text-align:center;
+        }
+
     /* .homeparagraph{
         text-align: center;
         width: 40em;
