--- a/Specsify_Source_Codes/3_Home_page/Home_CSS.css
+++ b/Specsify_Source_Codes/3_Home_page/Home_CSS.css
@@ -196,7 +196,25 @@ body{
 
     /* Button */
 
-    .button {
+    .button1 {
+      border: none;
+      background-color:#b3e4fc;
+      font-size: 16px;
+      cursor: pointer;
+      text-align:center;
+      display:inline-block;
+    }
+
+    .button2 {
+      border: none;
+      background-color:#b3e4fc;
+      font-size: 16px;
+      cursor: pointer;
+      text-align:center;
+      display:inline-block;
+    }
+
+    .button3 {
       border: none;
       background-color:#b3e4fc;
       font-size: 16px;
@@ -207,7 +225,7 @@ body{
     
     /* On mouse-over */
 
-    .button:hover {
+    .button1:hover {
         color: white;
       }
 
@@ -224,6 +242,10 @@ body{
             
         }
 
+        .button2:hover {
+          color: white;
+        }
+
         .CONTQ {
             height: 50px;
             width: 350px;
@@ -232,6 +254,10 @@ body{
             font-size: 11pt;
             text-align:center;
             margin-bottom: 10px;
+        }
+
+        .button3:hover {
+          color: white;
         }
 
         .SAVEDA {
