--- a/style/About_Us_page.css
+++ b/style/About_Us_page.css
@@ -2,8 +2,6 @@
 body{
     background-color: #b3e4fc;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    margin-left:10px;
-    margin-right:10px;
 }
 /* Nav bar CSS*/
 /* Icon 1 */
@@ -174,66 +172,21 @@ body{
     top: 21px;
     left: 8px;
     }
-
     /* End of Nav bar CSs*/
-    .homeparagraph{
-        text-align: center;
-        width: 45em;
-        margin-left: auto;
-        margin-right: auto;
-        font-family: Verdana, Geneva, Tahoma, sans-serif;
+
+    .empty1 {
+        height: 30px;
     }
 
     .title {
-        font-size: 20pt;
+        font-family: 'Work Sans', sans-serif;
+        font-size: 30pt;
         text-align: center;
     }
 
-    .button {
-        border: none;
-        background-color:#b3e4fc;
-        font-size: 16px;
-        cursor: pointer;
-        height: 50px;
-        width: 350px;
-        color: black;
-        box-shadow: 0 2px 10px 0 rgba(0,0,0,0.5);
-        font-size: 11pt;
-        text-align: center;
-
-
-      }
-
-      .empty {
-          height: 60px;
-      }
-    
-      /* On mouse-over */
-    
-      .button:hover {
-          color: white;
-        }
-
-        .submitButton {
-            border: none;
-            background-color:#b3e4fc;
-            font-size: 16px;
-            cursor: pointer;
-            height: 50px;
-            width: 350px;
-            color: black;
-            box-shadow: 0 2px 10px 0 rgba(0,0,0,0.5);
-            font-size: 11pt;
-            text-align: center;
-    
-    
-          }
-        
-          /* On mouse-over */
-        
-          .submitButton:hover {
-              color: white;
-            }
-                  
-              
-      
+    .info {
+        font-family: 'Work Sans', sans-serif;
+        font-size: 10pt;
+        margin-left: 15px;
+        margin-right: 15px;
+    }
