--- a/style/Help_page.css
+++ b/style/Help_page.css
@@ -2,8 +2,6 @@
 body{
     background-color: #b3e4fc;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    margin-left:10px;
-    margin-right:10px;
 }
 /* Nav bar CSS*/
 /* Icon 1 */
@@ -174,66 +172,56 @@ body{
     top: 21px;
     left: 8px;
     }
-
     /* End of Nav bar CSs*/
-    .homeparagraph{
+
+    .contact {
         text-align: center;
-        width: 45em;
-        margin-left: auto;
-        margin-right: auto;
-        font-family: Verdana, Geneva, Tahoma, sans-serif;
     }
 
     .title {
-        font-size: 20pt;
         text-align: center;
     }
 
-    .button {
-        border: none;
-        background-color:#b3e4fc;
-        font-size: 16px;
-        cursor: pointer;
-        height: 50px;
-        width: 350px;
-        color: black;
-        box-shadow: 0 2px 10px 0 rgba(0,0,0,0.5);
-        font-size: 11pt;
-        text-align: center;
+    .empty1 {
+        height: 70px;
+    }
 
-
-      }
-
-      .empty {
-          height: 60px;
-      }
-    
-      /* On mouse-over */
-    
-      .button:hover {
-          color: white;
+        #needHelp {
+            font-size: 40pt;
         }
 
-        .submitButton {
-            border: none;
-            background-color:#b3e4fc;
-            font-size: 16px;
-            cursor: pointer;
-            height: 50px;
-            width: 350px;
-            color: black;
-            box-shadow: 0 2px 10px 0 rgba(0,0,0,0.5);
-            font-size: 11pt;
-            text-align: center;
+        #assist {
+            margin-left: 20px;
+            margin-right: 20px;
+            font-size: 12pt;
+        }
     
-    
-          }
-        
-          /* On mouse-over */
-        
-          .submitButton:hover {
-              color: white;
-            }
-                  
-              
-      
+    #empty2 {
+        height: 140px;
+    }
+
+    #empty3 {
+        height: 70px;
+    }
+
+    #line1 {
+        height: 1px;
+        width: 300px;
+        background-color: black;
+        margin: auto;
+    }
+
+    #line2 {
+        height: 1px;
+        width: 300px;
+        background-color: black;
+        margin: auto;
+    }
+
+    #email {
+        font-size: 9pt;
+    }
+
+    #twitter {
+        font-size: 9pt;
+    }
