--- a/style/homepage.css
+++ b/style/homepage.css
@@ -195,6 +195,10 @@ body{
     margin-right: 25px;
   }
 
+  #empty {
+    height: 120px;
+  }
+
   /* Button */
 
   .button {
@@ -202,8 +206,9 @@ body{
     background-color:#b3e4fc;
     font-size: 16px;
     cursor: pointer;
-    text-align:center;
-    display:inline-block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   /* On mouse-over */
@@ -219,8 +224,6 @@ body{
           box-shadow: 0 2px 10px 0 rgba(0,0,0,0.5);
           font-size: 11pt;
           text-align:center;
-          margin-top: 60px;
-          margin-bottom: 10px;
 
   /* .homeparagraph{
       text-align: center;
