--- a/style/landingPage_CSS.css
+++ b/style/landingPage_CSS.css
@@ -31,7 +31,9 @@ body{
   background-color:#b3e4fc;
   font-size: 16px;
   cursor: pointer;
-  display:inline-block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 /* On mouse-over */
