--- a/style/Account_page.css
+++ b/style/Account_page.css
@@ -187,8 +187,6 @@ body{
         padding-right: 4px;
         padding-top: 4px;
         padding-bottom: 4px;
-        background: #fff;
-        box-shadow: 0 2px 10px 0 rgba(0,0,0,0.5);
     }
 
     .main-container {
@@ -225,8 +223,11 @@ body{
         background-color:#b3e4fc;
         font-size: 16px;
         cursor: pointer;
-        text-align:center;
-        display:inline-block;
+        display: block;
+        align-items: center;
+        justify-content: center;
+        vertical-align: middle;
+        
       }
       
       /* On mouse-over */
@@ -237,23 +238,25 @@ body{
 
         .save {
             height: 50px;
-            width: 350px;
             color: black;
             box-shadow: 0 2px 10px 0 rgba(0,0,0,0.5);
             font-size: 11pt;
-            text-align:center;
+            display: inline-block;
+            position: relative;
+            width: 400px;
 
             
         }
 
         .savedA {
             height: 50px;
-            width: 350px;
             color: black;
             box-shadow: 0 2px 10px 0 rgba(0,0,0,0.5);
             font-size: 11pt;
-            text-align:center;
             margin-bottom: 20px;
             margin-top: 130px;
+            display: inline-block;
+            position: relative;
+            width: 400px;
         }
       
