--- a/style/homepage.css
+++ b/style/homepage.css
@@ -2,6 +2,7 @@
 /* Body*/
 body{
   background-color: #b3e4fc;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 /* Nav bar CSS*/
 /* Icon 1 */
@@ -185,18 +186,19 @@ body{
     font-family: Arial, Helvetica, sans-serif;
   }
 
-  .head1 {
-    padding-bottom: 10px;
+  #head1 {
+    font-size:40pt;
+    padding-bottom: 0px;
   }
 
   .paraHome {
-    font-size: 10pt;
-    margin-left: 25px;
-    margin-right: 25px;
+    font-size: 12pt;
+    margin-left: 40px;
+    margin-right: 40px;
   }
 
   #empty {
-    height: 120px;
+    height: 150px;
   }
 
   /* Button */
@@ -218,18 +220,133 @@ body{
     }
 
       .NEWQ {
-          height: 50px;
-          width: 350px;
+          height: 65px;
+          width: 400px;
           color: black;
           box-shadow: 0 2px 10px 0 rgba(0,0,0,0.5);
-          font-size: 11pt;
+          font-size: 13pt;
           text-align:center;
-
-  /* .homeparagraph{
-      text-align: center;
-      width: 40em;
-      margin-left: auto;
-      margin-right: auto;
+      }
+      
+    /* Tablet */
+    @media screen and (max-width: 992px) {
+      body {
+      background-color: #b3e4fc;
       font-family: Verdana, Geneva, Tahoma, sans-serif;
+      }
+      .logoHandler {
+        text-align: center;
+      }
+      #logoh{
+        width: 300px;
+        height: 300px;
+      }
+      .descriptionDiv {
+        text-align: center;
+        font-family: Arial, Helvetica, sans-serif;
+      }
+
+      #head1 {
+        padding-bottom: 10px;
+        font-size:30pt;
+      }
+
+      .paraHome {
+        font-size: 10pt;
+        margin-left: 30px;
+        margin-right: 30px;
+      }
+
+      #empty {
+        height: 150px;
+      }
+
+      /* Button */
+
+      .button {
+        border: none;
+        background-color:#b3e4fc;
+        font-size: 16px;
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+
+      /* On mouse-over */
+
+      .button:hover {
+          color: white;
+        }
+
+          .NEWQ {
+            height: 60px;
+            width: 375px;
+            color: black;
+            box-shadow: 0 2px 10px 0 rgba(0,0,0,0.5);
+            font-size: 12pt;
+            text-align:center;
+        }
+}
+
+  /* Phone */
+  @media screen and (max-width: 600px) {
+    body {
+      background-color: #b3e4fc;
+      font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
+       
+        .logoHandler {
+          text-align: center;
+        }
+        #logoh{
+          width: 300px;
+          height: 300px;
+        }
+        .descriptionDiv {
+          text-align: center;
+          font-family: Arial, Helvetica, sans-serif;
+        }
+
+        #head1 {
+          padding-bottom: 10px;
+          font-size:20pt;
+        }
+
+        .paraHome {
+          font-size: 10pt;
+          margin-left: 25px;
+          margin-right: 25px;
+        }
+
+        #empty {
+          height: 120px;
+        }
+
+        /* Button */
+
+        .button {
+          border: none;
+          background-color:#b3e4fc;
+          font-size: 16px;
+          cursor: pointer;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+        }
+
+        /* On mouse-over */
+
+        .button:hover {
+            color: white;
+          }
+
+            .NEWQ {
+                height: 50px;
+                width: 350px;
+                color: black;
+                box-shadow: 0 2px 10px 0 rgba(0,0,0,0.5);
+                font-size: 11pt;
+                text-align:center;
+            }
   }
-   */
