--- a/style/landingpage.css
+++ b/style/landingpage.css
@@ -1,27 +1,33 @@
-/* Body*/
+/* Destop Media Query*/
 body{
-  background-color: #b3e4fc;
+  background-color:  #b3e4fc;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-.empty {
-  height: 70px;
-}
-
 .empty_1 {
-  height: 300px;
+  height: 210px;
 }
 
 .welcome {
   text-align:center;
-  font-size: 40pt;
+  font-size: 100pt;
   padding-bottom: -30px;
+  font-weight: 530;
+  margin-top:-30px;
 
+}
+
+#under {
+  text-align:center;
+  font-size:30pt;
+  margin-top: -90px;
+  font-weight: 100;
 }
 
 .description {
   text-align:center;
-  font-size: 10pt;
+  font-size: 14pt;
+  margin-top:120px;
   padding-left: 40px;
   padding-right: 40px;
 }
@@ -29,7 +35,7 @@ body{
 .btn {
   border: none;
   background-color:#b3e4fc;
-  font-size: 16px;
+  font-size: 20px;
   cursor: pointer;
   display: flex;
   align-items: center;
@@ -43,11 +49,144 @@ body{
   }
 
     .begin {
-      height: 50px;
-      width: 300px;
+      height: 65px;
+      width: 450px;
       color: black;
       box-shadow: 0 2px 10px 0 rgba(0,0,0,0.5);
-      font-size: 11pt;
+      font-size: 15pt;
       text-align: center;
+
+    }    
+
+
+
+/* On screens that are 992px or less, set the background color to blue */
+@media screen and (max-width: 992px) {
+  body{
+    background-color:  #b3e4fc;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+  }
+  
+  .empty {
+    height: 40px;
+  }
+  
+  .empty_1 {
+    height: 200px;
+  }
+  
+  .welcome {
+    text-align:center;
+    font-size: 70pt;
+    padding-bottom: -30px;
+    font-weight: 530;
+  
+  }
+
+  #under {
+    text-align:center;
+    font-size:25pt;
+    margin-top: -90px;
+    font-weight: 100;
+  }
+  
+  .description {
+    text-align:center;
+    font-size: 15pt;
+    margin-top:150px;
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+  
+  .btn {
+    border: none;
+    background-color:#b3e4fc;
+    font-size: 20px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  /* On mouse-over */
+  
+  .btn:hover {
+      color: white;
+    }
+  
+      .begin {
+        height: 65px;
+        width: 450px;
+        color: black;
+        box-shadow: 0 2px 10px 0 rgba(0,0,0,0.5);
+        font-size: 15pt;
+        text-align: center;
+  
+      }    
+}
+
+/* On screens that are 600px or less, set the background color to olive */
+@media screen and (max-width: 600px) {
+  body{
+    background-color: #b3e4fc;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+  }
+  
+  .empty {
+    height: 70px;
+  }
+  
+  .empty_1 {
+    height: 300px;
+  }
+  
+  .welcome {
+    text-align:center;
+    font-size: 40pt;
+    padding-bottom: -30px;
+    font-weight: 530;
+  
+  }
+
+  #under {
+    text-align:center;
+    font-size:20pt;
+    margin-top: -50px;
+    font-weight: 100;
+  }
+  
+  .description {
+    text-align:center;
+    font-size: 10pt;
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+  
+  .btn {
+    border: none;
+    background-color:#b3e4fc;
+    font-size: 16px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  /* On mouse-over */
+  
+  .btn:hover {
+      color: white;
+    }
+  
+      .begin {
+        height: 50px;
+        width: 300px;
+        color: black;
+        box-shadow: 0 2px 10px 0 rgba(0,0,0,0.5);
+        font-size: 11pt;
+        text-align: center;
+  
+      }    
+}
 
 
