--- a/style/About_Us_page.css
+++ b/style/About_Us_page.css
@@ -20,7 +20,7 @@ body{
     transition: .5s ease-in-out;
     cursor: pointer;
     }
-    
+
     .animated-icon1 span, .animated-icon2 span, .animated-icon3 span {
     display: block;
     position: absolute;
@@ -38,31 +38,31 @@ body{
     -o-transition: .25s ease-in-out;
     transition: .25s ease-in-out;
     }
-    
+
     .animated-icon1 span {
     background: #e65100;
     }
-    
+
     .animated-icon2 span {
     background: #e3f2fd;
     }
-    
+
     .animated-icon3 span {
     background: #f3e5f5;
     }
-    
+
     .animated-icon1 span:nth-child(1) {
     top: 0px;
     }
-    
+
     .animated-icon1 span:nth-child(2) {
     top: 10px;
     }
-    
+
     .animated-icon1 span:nth-child(3) {
     top: 20px;
     }
-    
+
     .animated-icon1.open span:nth-child(1) {
     top: 11px;
     -webkit-transform: rotate(135deg);
@@ -70,12 +70,12 @@ body{
     -o-transform: rotate(135deg);
     transform: rotate(135deg);
     }
-    
+
     .animated-icon1.open span:nth-child(2) {
     opacity: 0;
     left: -60px;
     }
-    
+
     .animated-icon1.open span:nth-child(3) {
     top: 11px;
     -webkit-transform: rotate(-135deg);
@@ -83,49 +83,49 @@ body{
     -o-transform: rotate(-135deg);
     transform: rotate(-135deg);
     }
-    
+
     /* Icon 3*/
-    
+
     .animated-icon2 span:nth-child(1) {
     top: 0px;
     }
-    
+
     .animated-icon2 span:nth-child(2), .animated-icon2 span:nth-child(3) {
     top: 10px;
     }
-    
+
     .animated-icon2 span:nth-child(4) {
     top: 20px;
     }
-    
+
     .animated-icon2.open span:nth-child(1) {
     top: 11px;
     width: 0%;
     left: 50%;
     }
-    
+
     .animated-icon2.open span:nth-child(2) {
     -webkit-transform: rotate(45deg);
     -moz-transform: rotate(45deg);
     -o-transform: rotate(45deg);
     transform: rotate(45deg);
     }
-    
+
     .animated-icon2.open span:nth-child(3) {
     -webkit-transform: rotate(-45deg);
     -moz-transform: rotate(-45deg);
     -o-transform: rotate(-45deg);
     transform: rotate(-45deg);
     }
-    
+
     .animated-icon2.open span:nth-child(4) {
     top: 11px;
     width: 0%;
     left: 50%;
     }
-    
+
     /* Icon 4 */
-    
+
     .animated-icon3 span:nth-child(1) {
     top: 0px;
     -webkit-transform-origin: left center;
@@ -133,7 +133,7 @@ body{
     -o-transform-origin: left center;
     transform-origin: left center;
     }
-    
+
     .animated-icon3 span:nth-child(2) {
     top: 10px;
     -webkit-transform-origin: left center;
@@ -141,7 +141,7 @@ body{
     -o-transform-origin: left center;
     transform-origin: left center;
     }
-    
+
     .animated-icon3 span:nth-child(3) {
     top: 20px;
     -webkit-transform-origin: left center;
@@ -149,7 +149,7 @@ body{
     -o-transform-origin: left center;
     transform-origin: left center;
     }
-    
+
     .animated-icon3.open span:nth-child(1) {
     -webkit-transform: rotate(45deg);
     -moz-transform: rotate(45deg);
@@ -158,12 +158,12 @@ body{
     top: 0px;
     left: 8px;
     }
-    
+
     .animated-icon3.open span:nth-child(2) {
     width: 0%;
     opacity: 0;
     }
-    
+
     .animated-icon3.open span:nth-child(3) {
     -webkit-transform: rotate(-45deg);
     -moz-transform: rotate(-45deg);
@@ -187,6 +187,7 @@ body{
     .info {
         font-family: 'Work Sans', sans-serif;
         font-size: 10pt;
+        text-align: center;
         margin-left: 15px;
         margin-right: 15px;
     }
