--- a/style/login.css
+++ b/style/login.css
@@ -1,5 +1,6 @@
     body {
             background-color: #b3e4fc;
+            font-family: 'Rubik', sans-serif;
         }
         #logo {
             width: 50%;
