--- a/style/index.css
+++ b/style/index.css
@@ -1,7 +1,7 @@
 /* Destop Media Query*/
 body{
   background-color:  #b3e4fc;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  ffont-family: 'Rubik', sans-sans-serif;
 }
 
 .empty_1 {
@@ -14,6 +14,7 @@ body{
   padding-bottom: -30px;
   font-weight: 530;
   margin-top:-30px;
+  font-family: 'Rubik', sans-serif;
 
 }
 
@@ -56,7 +57,7 @@ body{
       font-size: 15pt;
       text-align: center;
 
-    }    
+    }
 
 
 
@@ -66,21 +67,21 @@ body{
     background-color:  #b3e4fc;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
   }
-  
+
   .empty {
     height: 40px;
   }
-  
+
   .empty_1 {
     height: 200px;
   }
-  
+
   .welcome {
     text-align:center;
     font-size: 70pt;
     padding-bottom: -30px;
     font-weight: 530;
-  
+
   }
 
   #under {
@@ -89,7 +90,7 @@ body{
     margin-top: -90px;
     font-weight: 100;
   }
-  
+
   .description {
     text-align:center;
     font-size: 15pt;
@@ -97,7 +98,7 @@ body{
     padding-left: 40px;
     padding-right: 40px;
   }
-  
+
   .btn {
     border: none;
     background-color:#b3e4fc;
@@ -107,13 +108,13 @@ body{
     align-items: center;
     justify-content: center;
   }
-  
+
   /* On mouse-over */
-  
+
   .btn:hover {
       color: white;
     }
-  
+
       .begin {
         height: 65px;
         width: 450px;
@@ -121,8 +122,8 @@ body{
         box-shadow: 0 2px 10px 0 rgba(0,0,0,0.5);
         font-size: 15pt;
         text-align: center;
-  
-      }    
+
+      }
 }
 
 /* On screens that are 600px or less, set the background color to olive */
@@ -131,21 +132,21 @@ body{
     background-color: #b3e4fc;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
   }
-  
+
   .empty {
     height: 70px;
   }
-  
+
   .empty_1 {
     height: 300px;
   }
-  
+
   .welcome {
     text-align:center;
     font-size: 40pt;
     padding-bottom: -30px;
     font-weight: 530;
-  
+
   }
 
   #under {
@@ -154,14 +155,14 @@ body{
     margin-top: -50px;
     font-weight: 100;
   }
-  
+
   .description {
     text-align:center;
     font-size: 10pt;
     padding-left: 40px;
     padding-right: 40px;
   }
-  
+
   .btn {
     border: none;
     background-color:#b3e4fc;
@@ -171,13 +172,13 @@ body{
     align-items: center;
     justify-content: center;
   }
-  
+
   /* On mouse-over */
-  
+
   .btn:hover {
       color: white;
     }
-  
+
       .begin {
         height: 50px;
         width: 300px;
@@ -185,8 +186,6 @@ body{
         box-shadow: 0 2px 10px 0 rgba(0,0,0,0.5);
         font-size: 11pt;
         text-align: center;
-  
-      }    
+
+      }
 }
-
-
